# webrust

./: Cargo.toml
docker/: docker-compose.yaml
webapp/: Cargo.toml
weblib/: Cargo.toml
weblib/src/: main.rs
weblib/src/cipher/: rot13.rs  rsa.rs
weblib/src/encrypter/: mod.rs  rot13.rs
