[package]
name = "weblib"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "weblib"
path = "src/lib.rs"

[[bin]]
name = "webbin"
path = "src/main.rs"

[dependencies]
base64 = "0.21.5"
rand = "0.8.5"
rsa = "0.9.6"
